# music-maid

./: .gitignore  Cargo.toml  build.rs  devenv.nix  devenv.yaml
frontend/: bun.lockb
migrations/: 20241101190114_create_file.sql  20241101190506_create_vorbis.sql  20241101190655_create_picture_meta.sql  20241102092454_padding.sql
musicbrainz_db_plugin/: Cargo.toml  build.rs
musicbrainz_db_plugin/proto/: search.proto
musicbrainz_db_plugin/src/: lib.rs  server.rs
proto/: oni.proto
src/: cli.rs  formats.rs  main.rs  oni.rs  queue.rs  reader.rs  shared.rs  utils.rs
src/db/: audio_file.rs  mod.rs  padding.rs  picture.rs  vorbis.rs
src/formats/: flac.rs  opus_ogg.rs
src/io/: checksum.rs  mod.rs  ogg.rs  reader.rs
src/models/: track.rs
src/oni/: client.rs  server.rs
