[workspace]
members = [
  "musicbrainz_db_plugin"
]

[package]
name = "music-maid"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
musicbrainz_db_plugin = { path = "musicbrainz_db_plugin" }
clap = { version = "4.5.20", features = ["derive"] }
indicatif = "0.17.3"
